Fixed(ish) too many circles being drawn inside of strokes