@@ -63,6 +63,8 @@ public class StrokePolyBuilder {
 			addToPoly();
 		}
 	}
+
+	
 	
 	private void startPoly () {
 		Point[] tangentPoints = MiscGeom.calcExternalBitangentPoints(points.get(0), sizes.get(0), points.get(1), sizes.get(1));
@@ -105,26 +107,10 @@ public class StrokePolyBuilder {
 		}
 	}
 	
-	
-	/**
-	 * right handed first
-	 */
-	private static Point[] calcPerpOffset (Point p, Point ref, float dist) {
-		Point perpVect = new Point((ref.y - p.y), (p.x - ref.x));
-		float scalar1 = dist/(2*(float) Math.hypot(perpVect.x, perpVect.y));
-
-		Point[] points = new Point[2];
-		points[0] = new Point(p.x + scalar1*perpVect.x, p.y + scalar1*perpVect.y);
-		points[1] = new Point(p.x - scalar1*perpVect.x, p.y - scalar1*perpVect.y);
-		
-		return points;
-	}
-	
-	
 	private void backtrack () {
 		
 		// calculate the points to trace the circle to
-		Point[] offsets = calcPerpOffset(points.get(points.size()-1), points.get(points.size()-2), sizes.get(sizes.size()-1));
+		Point[] offsets = MiscGeom.calcPerpOffset(points.get(points.size()-1), points.get(points.size()-2), sizes.get(sizes.size()-1));
 		
 		while (poly.size() >= 2) {
 			Point[] pts = MiscGeom.circleSegmentIntersection(points.get(points.size()-1), sizes.get(sizes.size()-1), poly.get(poly.size()-1), poly.get(poly.size()-2));
@@ -132,7 +118,7 @@ public class StrokePolyBuilder {
 			if (pts[0] != null) {
 				poly.addLast(pts[0]);
 
-				LinkedList<Point> right = MiscGeom.traceCircularPath(points.get(points.size()-1), sizes.get(sizes.size()-1), false, poly.getLast(), offsets[1]);
+				LinkedList<Point> right = MiscGeom.approximateCircularArc(points.get(points.size()-1), sizes.get(sizes.size()-1), false, poly.getLast(), offsets[1]);
 				for (Point p : right) {
 					poly.addLast(p);
 				}
@@ -145,7 +131,7 @@ public class StrokePolyBuilder {
 			poly.clear();
 			
 			if (Float.isNaN(offsets[0].x) == false) {
-				LinkedList<Point> left = MiscGeom.traceCircularPath(points.get(points.size()-1), sizes.get(sizes.size()-1), true, offsets[0], offsets[1]);
+				LinkedList<Point> left = MiscGeom.approximateCircularArc(points.get(points.size()-1), sizes.get(sizes.size()-1), true, offsets[0], offsets[1]);
 				for (Point p : left) {
 					poly.addFirst(p);
 				}
@@ -162,7 +148,7 @@ public class StrokePolyBuilder {
 			if (pts[0] != null) {
 				poly.addFirst(pts[0]);
 				
-				LinkedList<Point> left = MiscGeom.traceCircularPath(points.get(points.size()-1), sizes.get(sizes.size()-1), true, poly.getFirst(), offsets[0]);
+				LinkedList<Point> left = MiscGeom.approximateCircularArc(points.get(points.size()-1), sizes.get(sizes.size()-1), true, poly.getFirst(), offsets[0]);
 				for (Point p : left) {
 					poly.addFirst(p);
 				}
@@ -187,7 +173,7 @@ public class StrokePolyBuilder {
 		
 		// Left hand side
 		if (tanIntPts[1] != null) {
-			LinkedList<Point> left = MiscGeom.traceCircularPath(points.get(containingIndex), sizes.get(containingIndex), true, poly.getFirst(), tanIntPts[1]);
+			LinkedList<Point> left = MiscGeom.approximateCircularArc(points.get(containingIndex), sizes.get(containingIndex), true, poly.getFirst(), tanIntPts[1]);
 			for (Point p : left) {
 				poly.addFirst(p);
 			}
@@ -198,7 +184,7 @@ public class StrokePolyBuilder {
 				Log.d("PEN", "circIntPts[1] == null");
 			}
 			
-			LinkedList<Point> left = MiscGeom.traceCircularPath(points.get(containingIndex), sizes.get(containingIndex), true, poly.getFirst(), circIntPts[1]);
+			LinkedList<Point> left = MiscGeom.approximateCircularArc(points.get(containingIndex), sizes.get(containingIndex), true, poly.getFirst(), circIntPts[1]);
 			for (Point p : left) {
 				poly.addFirst(p);
 			}
@@ -209,7 +195,7 @@ public class StrokePolyBuilder {
 		
 		// Right hand side
 		if (tanIntPts[0] != null) {
-			LinkedList<Point> right = MiscGeom.traceCircularPath(points.get(containingIndex), sizes.get(containingIndex), false, poly.getLast(), tanIntPts[0]);
+			LinkedList<Point> right = MiscGeom.approximateCircularArc(points.get(containingIndex), sizes.get(containingIndex), false, poly.getLast(), tanIntPts[0]);
 			for (Point p : right) {
 				poly.addLast(p);
 			}
@@ -220,7 +206,7 @@ public class StrokePolyBuilder {
 				Log.d("PEN", "circIntPts[0] == null");
 			}
 			
-			LinkedList<Point> right = MiscGeom.traceCircularPath(points.get(containingIndex), sizes.get(containingIndex), false, poly.getLast(), circIntPts[0]);
+			LinkedList<Point> right = MiscGeom.approximateCircularArc(points.get(containingIndex), sizes.get(containingIndex), false, poly.getLast(), circIntPts[0]);
 			for (Point p : right) {
 				poly.addLast(p);
 			}
@@ -242,9 +228,9 @@ public class StrokePolyBuilder {
 		debug.setStrokeWidth(0);
 		debug.setAntiAlias(true);
 		
-//		for (int i = 0; i < sizes.size(); i++) {
-//			c.drawCircle(points.get(i).x, points.get(i).y, sizes.get(i), debug);
-//		}
+		for (int i = 0; i < sizes.size(); i++) {
+			c.drawCircle(points.get(i).x, points.get(i).y, sizes.get(i), debug);
+		}
 		
 		if (poly != null && poly.size() >= 3) {
 			path.reset();
@@ -264,9 +250,9 @@ public class StrokePolyBuilder {
 		if (points.size() == 1) {
 			cap = MiscGeom.getCircularPoly(points.get(0), sizes.get(0));
 		} else if (containingIndex >= 0) {
-			cap = MiscGeom.traceCircularPath(points.get(containingIndex), sizes.get(containingIndex), false, poly.getLast(), poly.getFirst());
+			cap = MiscGeom.approximateCircularArc(points.get(containingIndex), sizes.get(containingIndex), false, poly.getLast(), poly.getFirst());
 		} else if (points.size() > 1) {
-			cap = MiscGeom.traceCircularPath(points.get(points.size()-1), sizes.get(sizes.size()-1), false, poly.getLast(), poly.getFirst());
+			cap = MiscGeom.approximateCircularArc(points.get(points.size()-1), sizes.get(sizes.size()-1), false, poly.getLast(), poly.getFirst());
 		}
 	}
 	
@@ -276,7 +262,7 @@ public class StrokePolyBuilder {
 	
 	
 	private static void startNewStroke (LinkedList<Point> currentPoly, Point[] tangentPoints, Point prevPoint, float prevSize) {
-		currentPoly.addAll(MiscGeom.traceCircularPath(prevPoint, prevSize, false, tangentPoints[0], tangentPoints[2]));
+		currentPoly.addAll(MiscGeom.approximateCircularArc(prevPoint, prevSize, false, tangentPoints[0], tangentPoints[2]));
 		currentPoly.addFirst(tangentPoints[0]);
 		currentPoly.addFirst(tangentPoints[1]);
 		currentPoly.addLast(tangentPoints[2]);
@@ -285,45 +271,36 @@ public class StrokePolyBuilder {
 	
 	
 	private void addToLhs (Point tail, Point head, Point joinCenter, float joinRad, Point newCenter, float newRad) {
+		Point intersection = MiscGeom.calcIntersection(poly.get(0), poly.get(1), head, tail);
 		
-		if (MiscGeom.cross(poly.get(0), poly.get(1), head, poly.get(1)) <= 0) {
-			LinkedList<Point> join = MiscGeom.traceCircularPath(joinCenter, joinRad, true, poly.getFirst(), tail);
+		if (intersection != null) {
+			poly.removeFirst();
+			poly.addFirst(intersection);
+			poly.addFirst(head);
+		} else {
+			LinkedList<Point> join = MiscGeom.approximateCircularArc(joinCenter, joinRad, true, poly.getFirst(), tail);
 			for (Point p : join) {
 				poly.addFirst(p);
 			}
 			poly.addFirst(tail);
 			poly.addFirst(head);
-		} else {
-			Point intersection = MiscGeom.calcIntersection(poly.get(0), poly.get(1), head, tail);
-			if (intersection == null) {
-				poly.addFirst(tail);
-				poly.addFirst(head);
-			} else {
-				poly.removeFirst();
-				poly.addFirst(intersection);
-				poly.addFirst(head);
-			}
 		}
 	}
 	
 	private void addToRhs (Point tail, Point head, Point joinCenter, float joinRad, Point newCenter, float newRad) {
-		if (MiscGeom.cross(poly.get(poly.size()-1), poly.get(poly.size()-2), head, poly.get(poly.size()-2)) >= 0) {
-			LinkedList<Point> join = MiscGeom.traceCircularPath(joinCenter, joinRad, false, poly.getLast(), tail);
+		Point intersection = MiscGeom.calcIntersection(poly.get(poly.size()-1), poly.get(poly.size()-2), head, tail);
+		
+		if (intersection != null) {
+			poly.removeLast();
+			poly.addLast(intersection);
+			poly.addLast(head);
+		} else {
+			LinkedList<Point> join = MiscGeom.approximateCircularArc(joinCenter, joinRad, false, poly.getLast(), tail);
 			for (Point p : join) {
 				poly.addLast(p);
 			}
 			poly.addLast(tail);
 			poly.addLast(head);
-		} else {
-			Point intersection = MiscGeom.calcIntersection(poly.get(poly.size()-1), poly.get(poly.size()-2), head, tail);
-			if (intersection == null) {
-				poly.addLast(tail);
-				poly.addLast(head);
-			} else {
-				poly.removeLast();
-				poly.addLast(intersection);
-				poly.addLast(head);
-			}
 		}
 	}
 	
